class TodoModel {
  int id;
  String title;
  bool isCompleted;

  TodoModel({
    required this.id,
    required this.title,
    required this.isCompleted,
  });
}
